--- a/.env
+++ b/.env
@@ -1,6 +1,12 @@
-VITE_FIREBASE_API_KEY=AIzaSyBRcx2gxAFfkBjovHq29l84t5cNDs267_w
-VITE_FIREBASE_AUTH_DOMAIN=studio-221966672-a99ca.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=studio-221966672-a99ca
-VITE_FIREBASE_STORAGE_BUCKET=studio-221966672-a99ca.firebasestorage.app
-VITE_FIREBASE_MESSAGING_SENDER_ID=74302602124
-VITE_FIREBASE_APP_ID=1:74302602124:web:308b774eb8dfcebddc74a9
+# --- Credenciales de Firebase (Proyecto: escuela-milan-web) ---
+VITE_FIREBASE_API_KEY=AIzaSyBB4Q4gjFUxPDPicLIyhBnmOD7IRIdGnow
+VITE_FIREBASE_AUTH_DOMAIN=escuela-milan-web.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=escuela-milan-web
+VITE_FIREBASE_STORAGE_BUCKET=escuela-milan-web.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=281964833686
+VITE_FIREBASE_APP_ID=1:281964833686:web:80e55351e447b4d6660bb7
+VITE_FIREBASE_MEASUREMENT_ID=G-LM3KLT2D6R
+
+# --- Credenciales de Cloudinary (Imágenes) ---
+VITE_CLOUDINARY_CLOUD_NAME=dyz8fbapn
+VITE_CLOUDINARY_UPLOAD_PRESET=9cb7daf0-f506-4d4d-ba49-afeb0d386a9b
