--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.9.0",
     "@react-pdf/renderer": "^4.3.2",
     "browser-image-compression": "^2.0.2",
     "firebase": "^12.7.0",
